assets/css/style.css
/* ... */
.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: rgba(0, 1, 5, 1);
    height: 2px;
    width: 2em;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}/*End of tutorial based code*/

main {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
    top: 4rem;
    margin-bottom: 30px;
}

#budapest {
    height: 100vh;
    width: 100%;
    background: url("../images/Untitled\ design.png") no-repeat center center/cover;
    background-color: rgba(0, 1, 5, 1);
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin-bottom: -30px;
}

#text-overlay {
    position: relative;
    top: 50%;
    left: 50%; 
    transform: translate(-50%, -50%);
    color: #DDE3fD;
    text-align: center;
    font-size: 24px;
    font-weight: bold;
    text-shadow: 2px 2px 4px rgba(0, 1, 5, 1);   
    padding: 20px;
}

.introduction {
    color: #DDE3FD;
    margin-top: 2rem;
    line-height: 1.4rem;
    font-size: 1.1rem;
    margin-bottom: 15px;
    padding: 20px;
}

.introduction h2 {
    text-decoration: underline;
    font-size: 2rem;
}

/*Chainbridge*/
.chainbridge {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
}

.image,
.image-cb {
    flex: 1;
    object-fit: contain;
}

.image img {
    width: 50vh;
    height: auto;
    display: block;
}

.image-cb img {
    width: 50vh;
    height: auto;
    display: block;
}

.text {
    flex: 1;
    padding: 20px;
    margin-top: 2rem;
    color: #DDE3FD;
    line-height: 1.4em;
    font-size: 1.4em;
}

.text h2 {
    text-decoration: underline;
}

/*Parliament*/
.parliament {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
}

.image-parl,
.image-parliament {
    flex: 1;
    object-fit: contain;
}

.image-parl img {
    width: 50vh;
    height: auto;
    display: block;
}

.image-parliament img {
    width: 50vh;
    height: auto;
    display: block;
}

.text-parl {
    flex: 1;
    padding: 20px;
    color: #DDE3FD;
    margin-top: 2rem;
    line-height: 1.4em;
    font-size: 1.4em;
}

.text-parl h2 {
    text-decoration: underline;
}

/*Castle*/
.castle {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
}

.image-castle,
.image-buda {
    flex: 1;
    object-fit: contain;
}

.image-castle img {
    width: 50vh;
    height: auto;
    display: block;
}

.image-buda img {
    width: 50vh;
    height: auto;
    display: block;
}

.text-castle {
    flex: 1;
    padding: 20px;
    margin-top: 2rem;
    color: #DDE3FD;
    line-height: 1.4em;
    font-size: 1.4em;
}

.text-castle h2 {
    text-decoration: underline;
}

/*Matthias Church*/
.matthias-church {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
}

.image-matt,
.image-matty {
    flex: 1;
    object-fit: contain;;
}

.image-matt img {
    width: 50vh;
    height: auto;
    display: block;
}

.image-matty img {
    width: 50vh;
    height: auto;
    display: block;
}

.text-matt {
    flex: 1;
    padding: 20px;
    margin-top: 2rem;
    color: #DDE3FD;
    line-height: 1.4em;
    font-size: 1.4em;
}
.text-matt h2 {
    text-decoration: underline;
}

/*Szimpla*/
.szimpla {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
    
}

.szimpla-image,
.szimpla-tv {
    flex: 1;
    object-fit: contain;
}

.szimpla-image img {
    width: 50vh;
    height: auto;
    display: block;
}

.szimpla-tv img {
    width: 50vh;
    height: auto;
    display: block;
}

.szimpla-text {
    flex: 1;
    padding: 20px;
    margin-top: 2rem;
    color: #DDE3FD;
    font-size: 1.4em;
    line-height: 1.4em;
}

.szimpla-text h2 {
    text-decoration: underline;
}

/*Gellert Hotel*/
.gellert {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
}

.gellert-image,
.gellert-hotel {
   flex: 1;
   object-fit: contain;
}

.gellert-image img {
    width: 50vh;
    height: auto;
    display: block;
}

.gellert-hotel img {
    width: 50vh;
    height: auto;
    display: block;
}

.gellert-text {
    flex: 1;
    padding: 20px;
    margin-top: 2rem;
    color: #DDE3FD;
    font-size: 1.4em;
    line-height: 1.4em;
}

.gellert-text h2 {
    text-decoration: underline;
}

/*Szechenyi*/
.szechenyi {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
}

.szechenyi-image,
.szechenyi-pool {
    flex: 1;
    object-fit: contain;
}

.szechenyi-image img {
    width: 50vh;
    height: auto;
    display: block;
}

.szechenyi-pool img {
    width: 50vh;
    height: auto;
    display: block;
}

.szechenyi-text {
    flex: 1;
    padding: 20px;
    margin-top: 2rem;
    color: #DDE3FD;
    font-size: 1.4em;
    line-height: 1.4em;
}

.szechenyi-text h2 {
    text-decoration: underline;
}

/*Market*/
.market {
    flex-direction: column;
    align-items: flex-start;
    overflow: hidden;
}

.market-image,
.market-two {
    flex: 1;
    object-fit: contain;
}

.market-image img {
    width: 50vh;
    height: auto;
    display: block;
}

.market-two img {
    width: 50vh;
    height: auto;
    display: block;
}

.market-text {
   flex: 1;
    padding: 20px;
    margin-top: 2rem;
    color: #DDE3FD;
    font-size: 1.4em;
    line-height: 1.4em;
}

.market-text h2 {
    text-decoration: underline;
}

/*Gallery (based on love running project)*/

#gallery {
    margin-top: 3.2rem;
}
#photo img {
    width: 100%;
    line-height: 1em;
    column-fill: balance;
}

#photo {
    line-height: 0;
}
/*Contact*/
.bg-image {
    width: 100%;
    height: 100vh;
    background: url("../images/dan-novac-SRxqOaWRK6g-unsplash.jpg") no-repeat center center/cover;
    overflow: scroll;
}
/* ... */

